--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-opencv-python-headless
-scipy
-imutils
-pygame
-facial-emotion-recognition
-streamlit
-mediapipe
-torch
-numpy
-torchvision
-facenet-pytorch
+streamlit==1.24.0
+opencv-python==4.7.0.72
+scipy==1.10.1
+numpy==1.24.3
+mediapipe==0.10.0
+pygame==2.5.0
+torch==2.0.1
+imutils==0.5.4
+facial-emotion-recognition==0.3.0
+facenet-pytorch==2.5.2
+pandas==2.0.3
+plotly==5.15.0
