--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.24.0
-opencv-python==4.7.0.72
+streamlit
+opencv-python
 scipy
-numpy==1.24.3
+numpy
 mediapipe
-pygame==2.5.0
-torch==2.0.1
-imutils==0.5.4
-facial-emotion-recognition==0.3.0
-facenet-pytorch==2.5.2
-pandas==2.0.3
-plotly==5.15.0
+pygame
+torch
+imutils
+facial-emotion-recognition
+facenet-pytorch
+pandas
+plotly
