--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.24.0
-opencv-python-headless
+opencv-python-headless==4.7.0.72
 scipy==1.10.1
 numpy==1.24.3
 mediapipe
@@ -11,4 +11,3 @@ facenet-pytorch==2.5.2
 pandas==2.0.3
 plotly==5.15.0
 streamlit-webrtc
-
